radarr-ns.yml
kind: Namespace
apiVersion: v1
metadata:
  name: radarr
  annotations:
    linkerd.io/inject: enabled
