radarr-deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: radarr
  labels:
    app: radarr
    part-of: radarr
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@hourly"
    keel.sh/match-tag: true
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
      part-of: radarr
  template:
    metadata:
      labels:
        app: radarr
        part-of: radarr
    spec:
      containers:
      - name: radarr
        image: ghcr.io/linuxserver/radarr:latest
        ports:
        - name: radarr
          containerPort: 7878
        volumeMounts:
        - name: radarr
          mountPath: /config
        - name: movies
          mountPath: /movies
        - name: downloads
          mountPath: /downloads/movies
        resources:
          limits:
            memory: 512Mi
            cpu: 0.5
          requests:
            memory: 64Mi
        readinessProbe:
          tcpSocket:
            port: radarr
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: radarr
          initialDelaySeconds: 15
          periodSeconds: 20
      volumes:
      - name: radarr
        persistentVolumeClaim:
          claimName: radarr
      - name: movies
        persistentVolumeClaim:
          claimName: movies
      - name: downloads
        persistentVolumeClaim:
          claimName: downloads
